# rusty-kaspa-stratum

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
bridge-tauri/src-tauri/: Cargo.toml
bridge-tauri/ui/dashboard/js/: dashboard.js
bridge/docs/: fix-zero-share-worker-ui-retention.md
bridge/src/: lib.rs  tests.rs
bridge/src/prom/: metrics.rs
bridge/src/prom/http/: mod.rs  serve.rs  static_files.rs
bridge/src/share_handler/: lifecycle.rs  mod.rs  vardiff.rs  work_stats.rs
bridge/src/stratum/: default_client.rs  stratum_line_codec.rs
bridge/src/stratum/client_handler/job_dispatch/: immediate_job.rs
bridge/src/stratum/stratum_listener/client_io/: read_loop.rs
docs/: README.md  UPSTREAM_SYNC.md
