[workspace]
resolver = "2"
members = ["bridge", "bridge-tauri/src-tauri"]
# Root `cargo build` / `cargo test` without `-p` only touch the headless bridge (not Tauri on Linux CI).
default-members = ["bridge"]

[workspace.package]
rust-version = "1.91.0"
version = "1.3.0-toc.5"
authors = ["Kaspa developers"]
license = "ISC"
repository = "https://github.com/LiveLaughLove13/rusty-kaspa-stratum"
edition = "2024"

# Match LiveLaughLove13/rusty-kaspa `bridge/` + Toccata consensus; pin rev in Cargo.lock for reproducible builds.
[workspace.dependencies]
kaspa-consensus-core = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-hashes = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-pow = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-addresses = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-rpc-service = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-grpc-client = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-notify = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-core = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-utils = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspad = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }
kaspa-alloc = { git = "https://github.com/LiveLaughLove13/rusty-kaspa.git", branch = "master" }

dirs = "5.0.1"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
hex = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.17"
async-trait = "0.1.88"
once_cell = "1.18.0"
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
parking_lot = "0.12.1"
regex = "1.10.2"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde", "js"] }
clap = { version = "4.5.35", features = ["derive", "string", "cargo"] }
chrono = "0.4.31"
sysinfo = "0.31.2"

[workspace.lints.clippy]
empty_docs = "allow"
uninlined_format_args = "allow"
