[package]
name = "rkstratum-bridge-desktop"
version = "0.1.0"
description = "Desktop shell (Tauri 1.x) for the RK Stratum bridge (embedded kaspa-stratum-bridge)"
authors = ["Kaspa developers"]
license = "ISC"
repository = "https://github.com/LiveLaughLove13/rusty-kaspa-stratum"
edition = "2021"
rust-version = "1.91.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Same library API as kaspanet/rusty-kaspa `bridge/` (runner, Cli, dashboard URL).
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.107"
tauri = { version = "1.5", features = ["api-all", "custom-protocol"] }
kaspa-stratum-bridge = { path = "../../bridge", default-features = true }
kaspa-alloc = { workspace = true }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.35", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Forward to the bridge crate so `--internal-cpu-miner` and related flags parse (optional build).
rkstratum_cpu_miner = ["kaspa-stratum-bridge/rkstratum_cpu_miner"]
